[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/screen_controls/ScreenControls.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/GUIFont.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.478431, 0.109804, 0.294118, 1 )

[node name="ScreenControls" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.297302
margin_bottom = -0.297302
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 90.0
margin_top = 54.0
margin_right = 390.0
margin_bottom = 266.0
rect_min_size = Vector2( 300, 0 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.729412, 0.313726, 0.266667, 1 )
text = "Controls"
align = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 300.0
margin_bottom = 23.0
custom_styles/separator = SubResource( 1 )

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 300.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
text = "Please choose a control method for winding and rewinding the tether. This can be changed from the options menu."
align = 1
autowrap = true

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 300.0
margin_bottom = 86.0
custom_styles/separator = SubResource( 1 )

[node name="ControlA" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 300.0
margin_bottom = 145.0
rect_min_size = Vector2( 0, 55 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ControlA"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/ControlA/VBoxContainer"]
margin_right = 300.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
text = "[LEFT MOUSE] to unwind
[RIGHT MOUSE] to rewind"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/ControlA/VBoxContainer"]
margin_top = 37.0
margin_right = 300.0
margin_bottom = 52.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.478431, 0.109804, 0.294118, 1 )
text = "Recommended for casuals"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 300.0
margin_bottom = 153.0
custom_styles/separator = SubResource( 1 )

[node name="ControlB" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 157.0
margin_right = 300.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 55 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ControlB"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 17.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/ControlB/VBoxContainer"]
margin_right = 300.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.976471, 0.839216, 1 )
text = "Hold [LEFT MOUSE] to place handle, and circular gestures to wind and rewind."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/ControlB/VBoxContainer"]
margin_top = 37.0
margin_right = 300.0
margin_bottom = 70.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.478431, 0.109804, 0.294118, 1 )
text = "Recommended for tether simulation aficionados"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/ControlA" to="." method="_on_ControlA_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/ControlA" to="." method="_on_ControlA_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ControlA" to="." method="_on_ControlA_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/ControlA/VBoxContainer/Label" to="." method="_on_Label3_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/ControlA/VBoxContainer/Label" to="." method="_on_Label3_mouse_exited"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/ControlA/VBoxContainer/Label2" to="." method="_on_Label3_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/ControlA/VBoxContainer/Label2" to="." method="_on_Label3_mouse_exited"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/ControlB" to="." method="_on_ControlB_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/ControlB" to="." method="_on_ControlB_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ControlB" to="." method="_on_ControlB_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/ControlB/VBoxContainer/Label" to="." method="_on_Label3_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/ControlB/VBoxContainer/Label" to="." method="_on_Label3_mouse_exited"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/ControlB/VBoxContainer/Label2" to="." method="_on_Label3_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/ControlB/VBoxContainer/Label2" to="." method="_on_Label3_mouse_exited"]
